syntax = "proto3";

package service.foo;

import "common.proto";

service FooRpc {
    rpc Greet(common.GreetRequest) returns (common.GreetResponse) {}
}
